--- a/index.html
+++ b/index.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
-<html>lang="es"
-<cabeza>
-<titulo>Mi cuaderno digital</titulo>
-<enlace relación="hoja de estilo"href="estilo.css">
-</cabeza>
-<cuerpo>
-  <encabezamiento>
-   <h1>Cuaderno de  clase</h1>
-   <pag>Trabajos realizados durante el año</pag>
-  </encabezamiento>
-  <principal>
-   <navegación>
-      <ul>
-      <yo><a href="trabajo1.html">Trabajo1:Cuento La Floresta</a></yo>
-      <yo><a href="trabajo2.html">Trabajo2:Creación del avatar en Heygen</a></yo>
-      <yo><a href="trabajo3.html">Trabajo3:Presentación sobre ciudadania digital</a></yo>
-      <yo><a href="trabajo4.html">Trabajo4:Primera pagina web escribiendo html</a></yo>
-   </ul>
-</navegación>
-</principal>
-<pie de pagina>
-<pag>2025 - Mi cuaderno de clase - Julieta Romero</pag>
-</pie de pagina>
-</cuerpo>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <title>Mi Cuaderno Digital</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1 class="tituloindex">Cuaderno de Clase</h1>
+        <h3>Julieta Romero</h3>
+        <p>Trabajos realizados durante el año</p>
+    </header>
+    <main>
+        <nav>
+            <ul>
+                <li><a href="cuento.html">Trabajo 1: Cuento La Floresta</a></li>
+                <li><a href="avatar.html">Trabajo 2: Creación del avatar en Heygen</a></li>
+                <li><a href="ciudadania_digital.html">Trabajo 3: Presentación sobre ciudadanía digital</a></li>
+                <li><a href="primera_web.html">Trabajo 4: Primera página web escribiendo HTML</a></li>
+            </ul>
+        </nav>
+    </main>
+    <footer>
+        <p>© 2025 - Mi Cuaderno de Clase</p>
+    </footer>
+</body>
 </html>
-      
